# RL

./: .dockerignore  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  requirements.txt
docker/: Dockerfile.wsl2.gpu  Dockerfile.wsl2.gpu.eval  Dockerfile.wsl2.gpu.ocr  README.md
docs/: ARCHITECTURE.md  GETTING_STARTED.md  PUBLICATION_AUDIT.md  PUBLISH_CHECKLIST.md  RESEARCH_PROGRAM.md
eval/transformer/: README.md  ablation.py  common.py  lejepa.py  long_context_accuracy.py  needle.py  paper_tasks_compare.py  retrieval.py  train_long_context_compare.py  train_text_lm_compare.py
experiments/: ROADMAP.md
experiments/contracts/: README.md
scripts/: bench_engram_breakdown.py  bench_transformer_variants.py  paper_scorecard.py  run_benchmark_ocr_like.sh  run_engram_variant_grid.sh  run_lm_eval.sh  run_long_context_compare_ddp.sh  run_long_context_compare_wsl2_ddp.sh  run_ocr_like_batch.sh  run_paper_suite.sh  run_paper_suite_multi_gpu.sh  run_paper_tasks_compare.sh  run_paper_tasks_compare_multi_gpu.sh  run_paper_tasks_compare_wsl2.sh  run_text_lm_compare.sh  run_text_lm_compare_wsl2.sh  run_train_deepseek_like_ocr_synth.sh  setup_eval_harnesses.sh  setup_ocr_like.sh  summarize_train_long_context_compare.py  sync_rl_wsl2.sh
tests/: test_attention_residuals.py  test_deepseek_v4_v6.py  test_lejepa.py  test_long_context_tasks.py  test_paper_tasks_compare.py  test_squared_activations.py
todo/: 01_start_here.md  02_architecture_choices.md  03_experiment_protocol.md  04_first_baseline.md  README.md
(+154 files in other folders)
