[project]
name = "rl"
version = "0.1.0"
description = "RL world-model experiments under tight compute budgets"
requires-python = ">=3.12"
dependencies = [
  "datasets",
  "einops",
  "gymnasium",
  "matplotlib",
  "numpy",
  "opencv-python",
  "rich",
  "tensorboard",
  "torch",
  "torchaudio",
  "torchvision",
  "tqdm",
  "transformers==5.13.1",
]

[project.optional-dependencies]
dmcontrol = [
  "dm-control",
]

[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"
